--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./css/global.css" />
     <link rel="stylesheet" href="./css/styleguide.css" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="icon" type="favicon" href="./icons/favicon.svg"/>
   </head>
   <body>
     <div class="frogr-landing-page">
@@ -33,7 +34,7 @@
           </div>
           <div class="frame-4">
           <div class="frame-5">
-            <img class="group-2" src="./images/section-one/one.png" />
+            <img class="group-2" src="./images/Section-one/one.svg" />
             <div class="image"></div>
           </div>
             <div class="rectangle-2"></div>
@@ -82,7 +83,8 @@
         <img class="group-3" src="./images/section-three/one.png" />
         <div class="frame-14">
           <p class="text-wrapper-10">Post a task in 60 Seconds</p>
-          <p class="text-wrapper-11">
+          <p class="text-wrapper-11">No app download needed. Start right from your browser.</p>
+          <p class="sub-text">
             Create tasks easily and share them with others. Choose the right people to get the job done!
           </p>
         </div>
@@ -139,116 +141,268 @@
             </div>
           </div>
         </div>
-        <!-- (All existing content continues exactly as before...) -->
-        <div class="div-block-sc-5">
-          <div class="div-block-sc-6">
-            <div class="frame-17"><p class="text-wrapper-17">Quick Dispute Resolution &amp; Refunds</p></div>
-            <div class="div-block-sc-7">
-              <div class="div-block-sc-8">
-                <div class="icon-2">
-                  <div class="img-wrapper"><img class="vector-15" src="./icons/star.svg" /></div>
-                </div>
-                <div class="div-4">
-                  <p class="text-wrapper-19">Get instant help with any disputes through 24/7 AI + Human Support.</p>
-                </div>
-              </div>
-              <div class="div-block-sc-8">
-                <img class="icon" src="./icons/wallet.svg" />
-                <div class="div-4">
-                  <p class="text-wrapper-51">Experience instant refunds with secure and reliable payment methods.</p>
-                </div>
-              </div>
-              <div class="div-block-sc-8">
-                <div class="icon-2">
-                  <div class="vector-wrapper-2"><img class="vector-16" src="./icons/peace.svg" /></div>
-                </div>
-                <div class="div-4">
-                  <p class="text-wrapper-21">
-                    Enjoy peace of mind knowing your transactions are protected every step of the way.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <img class="group-8" src="./images/Section-nine/right.png" />
-        </div>
 
-        <!-- ✅ Added FAQ Section -->
-        <section class="faq-section" aria-labelledby="faq-heading">
-          <div class="container">
-            <h2 id="faq-heading" class="faq-heading">Frequently Asked Questions</h2>
-            <div class="accordion">
-              <details open>
-                <summary>1. What kind of services can I book through your platform? What if my desired task is not mentioned in the given categories?</summary>
-                <div class="answer">
-                  <p>You can book a wide range of services including home cleaning, plumbing, electrical work, appliance repair, carpentry, cooking, childcare, elderly care, pet care, and more. If your specific task isn’t listed, you can submit a “custom request” — our team will connect you with the most suitable tasker for the job!</p>
-                </div>
-              </details>
-              <details>
-                <summary>2. How do I know the taskers are trustworthy?</summary>
-                <div class="answer"><p>All taskers undergo identity verification, background checks, and review-based ranking.</p></div>
-              </details>
-              <details>
-                <summary>3. What if I don’t speak the same language as the tasker?</summary>
-                <div class="answer"><p>We offer in-app translation and real-time AI language support to help communication.</p></div>
-              </details>
-              <details>
-                <summary>4. Can I schedule tasks in advance?</summary>
-                <div class="answer"><p>Yes — choose a date and time when you post your task or contact support for special arrangements.</p></div>
-              </details>
-              <details>
-                <summary>5. Is frogr more expensive than hiring directly?</summary>
-                <div class="answer"><p>We strive for fair pricing. Our platform adds verification, escrow, and support — you can compare matched rates before booking.</p></div>
-              </details>
-              <details>
-                <summary>6. How do payments work?</summary>
-                <div class="answer"><p>Payments are held in escrow and released to the tasker only after you confirm completion.</p></div>
-              </details>
-            </div>
-          </div>
-        </section>
-
-        <!-- ✅ Added Footer Section -->
-        <footer class="site-footer" aria-labelledby="footer-heading">
-          <div class="footer-container">
-            <div class="footer-brand">
-              <img src="./icons/white-logo.svg" alt="frogr logo" class="footer-logo" />
-              <div class="footer-languages">3+ Languages</div>
-              <p class="footer-desc">
-                Empowering people to work freely and get things done faster.<br />
-                From daily tasks to skilled projects — Frogr connects trusted workers with real opportunities.<br />
-                No Shift. No Boss. No Limit.
+         <!-- ✅ ADDED: Most Popular Categories SECTION (placed just before FAQ) -->
+          <div class="frame-18">
+            <div class="frame-19">
+              <div class="text-wrapper-23">Most Popular Categories</div>
+              <p class="text-wrapper-24">
+                These are the categories tasks available for you to choose from.
               </p>
-              <small class="copyright">© 2025 Metfrogr. All rights reserved. Made with ❤️ in India</small>
             </div>
-            <div class="footer-links">
-              <div class="col">
-                <h4>About us</h4>
-                <ul>
-                  <li><a href="#">Privacy policy</a></li>
-                  <li><a href="#">Terms of service</a></li>
-                </ul>
+            <div class="component">
+              <div class="frame-20">
+                <div class="background">
+                  <div class="frame-21">
+                    <div class="frame-22">
+                      <div class="heading"><div class="text-wrapper-25">Plumbing</div></div>
+                      <p class="text-wrapper-26">
+                        Quick fixes and reliable solutions for all your water and pipe issues.
+                      </p>
+                    </div>
+                    <div class="image-2"></div>
+                  </div>
+                </div>
+                <div class="background">
+                  <div class="frame-23">
+                    <div class="frame-22">
+                      <div class="text-wrapper-27">Electrical</div>
+                      <p class="text-wrapper-26">
+                        Safe and professional handling of all electrical repairs and installations.
+                      </p>
+                    </div>
+                    <div class="image-3"></div>
+                  </div>
+                </div>
+                <div class="background">
+                  <div class="frame-24">
+                    <div class="frame-22">
+                      <div class="text-wrapper-27">Carpentry</div>
+                      <p class="text-wrapper-26">
+                        Custom woodwork, furniture repairs, and fittings made easy.
+                      </p>
+                    </div>
+                    <div class="image-4"></div>
+                  </div>
+                </div>
               </div>
-              <div class="col">
-                <h4>Help docs</h4>
-                <ul>
-                  <li><a href="#">Features</a></li>
-                  <li><a href="#">Support</a></li>
-                  <li><a href="#">Verification</a></li>
-                </ul>
+
+              <div class="frame-20">
+                <div class="background-2">
+                  <div class="frame-25">
+                    <div class="frame-22">
+                      <div class="heading"><div class="text-wrapper-28">Construction</div></div>
+                      <p class="text-wrapper-26">
+                        Strong, efficient, and quality building for any project size.
+                      </p>
+                    </div>
+                    <div class="image-5"></div>
+                  </div>
+                </div>
+                <div class="background-2">
+                  <div class="frame-26">
+                    <div class="frame-27">
+                      <div class="text-wrapper-29">Painting and Renovation</div>
+                      <p class="text-wrapper-26">
+                        Transform your space with fresh colors and expert upgrades.
+                      </p>
+                    </div>
+                    <div class="image-6"></div>
+                  </div>
+                </div>
+                <div class="background-2">
+                  <div class="frame-28">
+                    <div class="frame-22">
+                      <div class="text-wrapper-27">Appliance Repair</div>
+                      <p class="text-wrapper-30">
+                        Fast fixes to keep your home appliances running smoothly.
+                      </p>
+                    </div>
+                    <div class="image-7"></div>
+                  </div>
+                </div>
               </div>
-              <div class="col">
-                <h4>Stay connected</h4>
-                <div class="social">
-                  <a class="icon" href="#" aria-label="Twitter">T</a>
-                  <a class="icon" href="#" aria-label="Facebook">f</a>
-                  <a class="icon" href="#" aria-label="Instagram">◉</a>
-                  <a class="icon" href="#" aria-label="LinkedIn">in</a>
+
+              <div class="frame-20">
+                <div class="background-2">
+                  <div class="frame-29">
+                    <div class="frame-22">
+                      <div class="heading"><div class="text-wrapper-25">Welding</div></div>
+                      <p class="text-wrapper-26">
+                        Durable and precise welding services for all your needs.
+                      </p>
+                    </div>
+                    <div class="image-8"></div>
+                  </div>
+                </div>
+                <div class="background-2">
+                  <div class="frame-30">
+                    <div class="frame-22">
+                      <div class="heading"><div class="text-wrapper-31">House Cleaning</div></div>
+                      <p class="text-wrapper-26">
+                        Sparkling clean homes with hassle-free deep cleaning.
+                      </p>
+                    </div>
+                    <div class="image-9"></div>
+                  </div>
+                </div>
+                <div class="background-2">
+                  <div class="frame-31">
+                    <div class="frame-32">
+                      <div class="heading"><div class="text-wrapper-32">Pest Control</div></div>
+                      <p class="text-wrapper-33">
+                        Safe and effective treatments to keep pests away.
+                      </p>
+                    </div>
+                    <div class="image-10"></div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-        </footer>
+
+          
+        
+          <!-- (Existing sections continue unchanged...) -->
+
+          <div class="div-block-sc-5">
+            <div class="div-block-sc-6">
+              <div class="frame-17"><p class="text-wrapper-17">Quick Dispute Resolution & Refunds</p></div>
+              <div class="div-block-sc-7">
+                <div class="div-block-sc-8">
+                  <div class="icon-2">
+                    <div class="img-wrapper">
+                      <img class="vector-15" src="./icons/star.svg" />
+                    </div>
+                  </div>
+                  <div class="div-4">
+                    <p class="text-wrapper-19">
+                      Get instant help with any disputes through 24/7 AI + Human Support.
+                    </p>
+                  </div>
+                </div>
+                <div class="div-block-sc-8">
+                  <img class="icon" src="./icons/wallet.svg" />
+                  <div class="div-4">
+                    <p class="text-wrapper-51">
+                      Experience instant refunds with secure and reliable payment methods.
+                    </p>
+                  </div>
+                </div>
+                <div class="div-block-sc-8">
+                  <div class="icon-2">
+                    <div class="vector-wrapper-2">
+                      <img class="vector-16" src="./icons/peace.svg" />
+                    </div>
+                  </div>
+                  <div class="div-4">
+                    <p class="text-wrapper-21">
+                      Enjoy peace of mind knowing your transactions are protected every step of the way.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <img class="group-8" src="./images/Section-nine/right.png" />
+          </div>
+
+          <!-- ✅ FAQ Section -->
+          <section class="faq-section" aria-labelledby="faq-heading">
+            <div class="container">
+              <h2 id="faq-heading" class="faq-heading">Frequently Asked Questions</h2>
+              <div class="accordion">
+                <details open>
+                  <summary>
+                    1. What kind of services can I book through your platform? What if my desired task is not mentioned in the given categories?
+                  </summary>
+                  <div class="answer">
+                    <p>
+                      You can book a wide range of services including home cleaning, plumbing, electrical work, appliance repair, carpentry, cooking, childcare, elderly care, pet care, and more. If your specific task isn’t listed, you can submit a “custom request” — our team will connect you with the most suitable tasker for the job!
+                    </p>
+                  </div>
+                </details>
+                <details>
+                  <summary>2. How do I know the taskers are trustworthy?</summary>
+                  <div class="answer">
+                    <p>All taskers undergo identity verification, background checks, and review-based ranking.</p>
+                  </div>
+                </details>
+                <details>
+                  <summary>3. What if I don’t speak the same language as the tasker?</summary>
+                  <div class="answer">
+                    <p>We offer in-app translation and real-time AI language support to help communication.</p>
+                  </div>
+                </details>
+                <details>
+                  <summary>4. Can I schedule tasks in advance?</summary>
+                  <div class="answer">
+                    <p>Yes — choose a date and time when you post your task or contact support for special arrangements.</p>
+                  </div>
+                </details>
+                <details>
+                  <summary>5. Is frogr more expensive than hiring directly?</summary>
+                  <div class="answer">
+                    <p>We strive for fair pricing. Our platform adds verification, escrow, and support — you can compare matched rates before booking.</p>
+                  </div>
+                </details>
+                <details>
+                  <summary>6. How do payments work?</summary>
+                  <div class="answer">
+                    <p>Payments are held in escrow and released to the tasker only after you confirm completion.</p>
+                  </div>
+                </details>
+              </div>
+            </div>
+          </section>
+
+          <!-- ✅ Footer Section -->
+          <footer class="site-footer" aria-labelledby="footer-heading">
+            <div class="footer-container">
+              <div class="footer-brand">
+                <img src="./icons/white-logo.svg" alt="frogr logo" class="footer-logo" />
+                <div class="footer-languages">3+ Languages</div>
+                <p class="footer-desc">
+                  Empowering people to work freely and get things done faster.<br />
+                  From daily tasks to skilled projects — Frogr connects trusted workers with real opportunities.<br />
+                  No Shift. No Boss. No Limit.
+                </p>
+                <small class="copyright">© 2025 Metfrogr. All rights reserved. Made with ❤️ in India</small>
+              </div>
+              <div class="footer-links">
+                <div class="col">
+                  <h4>About us</h4>
+                  <ul>
+                    <li><a href="#">Privacy policy</a></li>
+                    <li><a href="#">Terms of service</a></li>
+                  </ul>
+                </div>
+                <div class="col">
+                  <h4>Help docs</h4>
+                  <ul>
+                    <li><a href="#">Features</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="#">Verification</a></li>
+                  </ul>
+                </div>
+                <div class="col">
+                  <h4>Stay connected</h4>
+                  <div class="social">
+                    <a class="icon" href="#" aria-label="Twitter">T</a>
+                    <a class="icon" href="#" aria-label="Facebook">f</a>
+                    <a class="icon" href="#" aria-label="Instagram">◉</a>
+                    <a class="icon" href="#" aria-label="LinkedIn">in</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </footer>
+
+        </div> <!-- closes .frame -->
+        <img class="line" src="img/line-204.svg" />
+        <img class="line-2" src="img/line-205.svg" />
+      </div> <!-- closes .frogr-landing-page -->
+  </body>
+</html>
 
       </div> <!-- closes .frame -->
       <img class="line" src="img/line-204.svg" />
