--- a/index.html
+++ b/index.html
@@ -1190,9 +1190,9 @@
           <h4>Stay connected</h4>
           <div class="social">
             <a class="icon" href="https://x.com/frogr_in?s=20" target="_blank" aria-label="Twitter"><img src="./icons/twitter.png" alt=""></a>
-            <a class="icon" href="https://www.facebook.com/share/1An8N3JZfA/" target="_blank" aria-label="Facebook"><img src="./icons/facebook.png" alt=""></a>
+            <a class="icon" href="https://www.facebook.com/metfrogr/" target="_blank" aria-label="Facebook"><img src="./icons/facebook.png" alt=""></a>
             <a class="icon" href="https://www.instagram.com/frogr.in?igsh=Y3l0dnI1MTVjeThz" target="_blank" aria-label="Instagram"><img src="./icons/instagram.png" alt="metfrogr"></a>
-            <a class="icon" href="https://www.linkedin.com/in/metfrogr-technologies-a15a13393?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" aria-label="LinkedIn"><img src="./icons/linkedin.png" alt=""></a>
+            <a class="icon" href="https://www.linkedin.com/company/frogr/posts/?feedView=all" target="_blank" aria-label="LinkedIn"><img src="./icons/linkedin.png" alt=""></a>
           </div>
         </div>
       </div>
