--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
+  <title>Frogr</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -138,12 +138,12 @@
     <section class="section-three">
       <div class="banner-container">
         <div class="banner-text">
-          <h2 class="">Post a task in 60 Seconds</h2>
+          <h2 class="">Post a job in 60 Seconds</h2>
           <p class="">
             No app download needed. Start right from your browser.
           </p>
           <p class="twenty-four-medium">
-            Post your task. Get bids. Choose the right person
+            Post your job. Get bids. Choose the right person
           </p>
         </div>
       </div>
@@ -164,10 +164,10 @@
             <div class="toggle-wrapper">
               <div class="toggle-container">
                 <button type="button" class="toggle-btn active" id="employerBtn">
-                  Employer
+                  Job Provider
                 </button>
                 <button type="button" class="toggle-btn" id="taskerBtn">
-                  Tasker
+                  Job Taker
                 </button>
               </div>
             </div>
@@ -592,7 +592,7 @@
     <section class="services-header-wrap" id="services-header-wrap">
       <div class="services-header-inner">
         <h2 class="services-title">Most Popular Categories</h2>
-        <p class="services-sub">These are the categories tasks available for you to choose from.</p>
+        <p class="services-sub">These are the categories jobs available for you to choose from.</p>
       </div>
     </section>
 
@@ -923,8 +923,8 @@
       <div class="full-container">
 
         <header class="vt-header">
-          <h2 class="vt-title fourty-two-semi-bold">Reliable & Verified Taskers</h2>
-          <p class="vt-sub twenty-four-medium">Your safety and satisfaction are our top priorities. Every tasker on our
+          <h2 class="vt-title fourty-two-semi-bold">Reliable & Verified Job Takers</h2>
+          <p class="vt-sub twenty-four-medium">Your safety and satisfaction are our top priorities. Every job taker on our
             platform goes
             through our rigorous three-step verification process.</p>
         </header>
@@ -936,7 +936,7 @@
             <div class="vt-illustration" role="img" aria-hidden="true"></div>
             <div class="vt-body">
               <h3 class="vt1-title">KYC ID Verification</h3>
-              <p class="twenty-regular">Every tasker goes through comprehensive identity verification including
+              <p class="twenty-regular">Every job taker goes through comprehensive identity verification including
                 government ID, address proof,
                 and background checks.</p>
               <p class="vt-note">Verification powered by frogr Secure™ system.</p>
@@ -950,7 +950,7 @@
               <h3 id="vt2-title">Customer Reviews / Ranking</h3>
               <p class="twenty-regular">Our smart ranking algorithm considers customer reviews, ratings, and feedback to
                 ensure you get the
-                best taskers.</p>
+                best job takers.</p>
               <p class="vt-note">Top rated workers list</p>
             </div>
           </article>
@@ -960,7 +960,7 @@
             <div class="vt-illustration" role="img" aria-hidden="true"></div>
             <div class="vt-body">
               <h3 id="vt3-title">Secure Wallet Gateway Payment</h3>
-              <p class="twenty-regular">Funds are held in escrow and released only after both sides confirm task
+              <p class="twenty-regular">Funds are held in escrow and released only after both sides confirm job
                 completion.</p>
               <p class="vt-note"></p>
             </div>
@@ -970,8 +970,8 @@
             <img src="./images/Section-eight/04.png" alt="">
             <div class="vt-illustration" role="img" aria-hidden="true"></div>
             <div class="vt-body">
-              <h3 id="vt4-title">Insurance Covered for Taskers</h3>
-              <p class="twenty-regular">Automatic accident and liability coverage ensures every task is protected for
+              <h3 id="vt4-title">Insurance Covered for job takers</h3>
+              <p class="twenty-regular">Automatic accident and liability coverage ensures every job is protected for
                 peace of mind.</p>
               <p class="vt-note"></p>
             </div>
@@ -1030,7 +1030,7 @@
             </div>
             <div class="text">
               <!-- <h1 class="twenty-medium">Book</h1> -->
-              <h1 class="twenty-regular">Support in English, Hindi & Tamil</h1>
+              <h1 class="twenty-regular">Support in English, Hindi & Kannada</h1>
             </div>
           </div>
           
@@ -1062,37 +1062,37 @@
         <div class="accordion">
           <details open>
             <summary>
-              1. What kind of services can I book through your platform? What if my desired task is not mentioned in
+              1. What kind of services can I book through your platform? What if my desired job is not mentioned in
               the given categories?
             </summary>
             <div class="answer">
               <p>
                 You can book a wide range of services including home cleaning, plumbing, electrical work, appliance
-                repair, carpentry, cooking, childcare, elderly care, pet care, and more. If your specific task isn’t
-                listed, you can submit a “custom request” — our team will connect you with the most suitable tasker
+                repair, carpentry, cooking, childcare, elderly care, pet care, and more. If your specific job isn’t
+                listed, you can submit a “custom request” — our team will connect you with the most suitable job taker
                 for the job!
               </p>
             </div>
           </details>
 
           <details>
-            <summary>2. How do I know the taskers are trustworthy?</summary>
+            <summary>2. How do I know the job takers are trustworthy?</summary>
             <div class="answer">
-              <p>All taskers undergo identity verification, background checks, and review-based ranking.</p>
+              <p>All job takers undergo identity verification, background checks, and review-based ranking.</p>
             </div>
           </details>
 
           <details>
-            <summary>3. What if I don’t speak the same language as the tasker?</summary>
+            <summary>3. What if I don’t speak the same language as the job taker?</summary>
             <div class="answer">
               <p>We offer in-app translation and real-time AI language support to help communication.</p>
             </div>
           </details>
 
           <details>
-            <summary>4. Can I schedule tasks in advance?</summary>
+            <summary>4. Can I schedule jobs in advance?</summary>
             <div class="answer">
-              <p>Yes — choose a date and time when you post your task or contact support for special arrangements.</p>
+              <p>Yes — choose a date and time when you post your job or contact support for special arrangements.</p>
             </div>
           </details>
 
@@ -1107,7 +1107,7 @@
           <details>
             <summary>6. How do payments work?</summary>
             <div class="answer">
-              <p>Payments are held in escrow and released to the tasker only after you confirm completion.</p>
+              <p>Payments are held in escrow and released to the job taker only after you confirm completion.</p>
             </div>
           </details>
 
@@ -1165,7 +1165,7 @@
         <p class="footer-desc">
           No Shift. No Boss. No Limit. <br>
           Empowering people to work freely and get things done faster.<br />
-          From daily tasks to skilled projects — Frogr connects trusted workers with real opportunities.
+          From daily jobs to skilled projects — Frogr connects trusted workers with real opportunities.
         </p>
        
       </div>
